force-app/main/default/objects/Product2/fields/Is_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Is_Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attestation products may trigger compliance reviews.</description>
    <inlineHelpText>Attestation products may trigger compliance reviews.</inlineHelpText>
    <label>Is Attestation</label>
    <type>Checkbox</type>
</CustomField>