force-app/main/default/objects/Product2/fields/Price_Exception_Approver__c.field-meta.xml
<CustomField>
    <fullName>Price_Exception_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the partner who can approve custom pricing</description>
    <label>Price Exception Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>