force-app/main/default/objects/Product2/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Owner gets notifications when the product is added to Opportunities. Generally they are Subject Matter Expert and/or team leader for this product.</description>
    <inlineHelpText>The Product Owner gets notifications when the product is added to Opportunities. Generally they are Subject Matter Expert and/or team leader for this product.</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>