force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>Price_Exception_Approver__c</columns>
    <columns>Product_Owner__c</columns>
    <columns>Is_Attestation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>